<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
>

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar_back"/>

    </android.support.design.widget.AppBarLayout>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:id="@+id/linlay_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_cover"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/knight"
                android:alpha="1"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_test_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/et_test_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/test_name"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_test_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/et_test_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/test_desc"/>
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
    >

        <TextView
                android:id="@+id/tv_test_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_cards"
                android:textColor="@color/primary_text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="@dimen/text.18" />

        <LinearLayout
                android:id="@+id/li_added_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:visibility="gone">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_added_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/text.16"
                        android:text="@string/menu_cards"
                />
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/tv_add_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_card"
                android:textSize="@dimen/text.16"
                android:textColor="@color/primary"
                android:layout_marginTop="8dp"/>

    </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
        >

            <TextView
                    android:id="@+id/tv_test_epoch_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/epoch"
                    android:textColor="@color/primary_text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textSize="@dimen/text.18" />

            <LinearLayout
                    android:id="@+id/li_added_epoch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:visibility="gone">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/tv_added_epoch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/text.16"
                            android:text="@string/menu_cards"
                    />
                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:id="@+id/tv_add_epoch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_epoch"
                    android:textSize="@dimen/text.16"
                    android:textColor="@color/primary"
                    android:layout_marginTop="8dp"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/links"
                    android:textColor="@color/primary_text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textSize="@dimen/text.18" />

            <LinearLayout
                    android:id="@+id/li_added_links"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_add_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_link"
                    android:textSize="@dimen/text.16"
                    android:textColor="@color/primary"
                    android:layout_marginTop="8dp"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create_questions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:text="@string/create_questions"/>

    </LinearLayout>
</ScrollView>

</android.support.design.widget.CoordinatorLayout>