<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
>

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/toolbar_sign_in"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_cover"
                android:src="@drawable/knight"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center_horizontal"
                android:alpha="1"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
        />

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text.24"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
        />


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText
                    android:id="@+id/et_email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
            />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_enter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:text="@string/sign_in"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:text="@string/sign_up"/>

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_epoch"
                android:src="@drawable/knight"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center_horizontal"
                android:alpha="1"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
                android:visibility="gone"
        />

    </LinearLayout>
</ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
